2012-11-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/QtGnuplotWidget.cpp:  Fix mouse tracking and resize
	events for persistent qt windows.

2012-10-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_reset_after_error) src/parse.h src/util.c:
	Error exit from inside try_to_get_string() left the internal flag for
	string parsing in an incorrect state.  Provide a reset routine.
	Example of original bug:	stats file"
					print 1+2
					       ^ ';' expected

2012-10-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c: Fix a coding error, (sizeof((char *)buf) rather than
	(strlen((char *)buf)), that can cause a buffer overrun on 64-bit
	machines.  Found by valgrind.

2012-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Save axis scaling for 3D 'set view map' plots so
	that outboard drivers can continue mousing in -persist mode.

2012-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/mouse.h src/mousecmn.h:  Allow the "bind" command to
	attach a user command to mouse button 1, at least for 2D plots.

2012-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/xlib.trm: Reset X11_ipc when xlib terminal exits; otherwise a
	subsequent "set term x11" fails to send output to gnuplot_x11.

2012-10-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (do_string_and_free):  The "exit" command was not working
	inside a bracketed clause.  Bug #3576439

2012-10-15  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm (set_font): The libgd terminals were failing to 
	notice a change in font size sent by set_term(",newsize")
	Bugfix (old bug!)

	* term/canvas.trm (set_font); Minimal set_font routine for canvas
	terminal. All it does at this point is change or restore the font size.

	* src/term.c (term_start_multiplot): The calculation of vertical space